# panda-robot-control

./: .gitignore  README.md
panda_ws/src/franka_aic/: CMakeLists.txt  franka_aic_plugin.xml
panda_ws/src/franka_aic/cfg/: compliance_param.cfg  desired_mass_param.cfg
panda_ws/src/franka_aic/config/: franka_aic.yaml
panda_ws/src/franka_aic/include/franka_aic/: AIC_controller.h  AIC_controller.h.backup fra før ik implementering  MRAC_controller.h  MRAC_controller.h.backup fra før modifikationer
panda_ws/src/franka_aic/include/panda_utils/: panda_trac_ik.h
panda_ws/src/franka_aic/launch/: AIC_controller.launch  MRAC_controller.launch  sim_AIC_controller.launch
panda_ws/src/franka_aic/scripts/: test.py
panda_ws/src/franka_aic/src/: AIC_controller.cpp  AIC_controller.cpp joint reference backup  AIC_controller.cpp.backup før ik inklusion  AICpanda.cpp  MRAC_controller.cpp
panda_ws/src/franka_aic/src/panda_utils/: panda_arm.urdf  panda_trac_ik.cpp
panda_ws/src/franka_aic/urdf/: my_panda.urdf
panda_ws/src/nils_master_pkg/: CMakeLists.txt
panda_ws/src/nils_master_pkg/config/: gripper_config.json
panda_ws/src/nils_master_pkg/launch/: object-detector-christian.launch  object-detector.launch  pick-up-static-known.launch  pick-up-static-unknown.launch
panda_ws/src/nils_master_pkg/msg/: PredictedPoses.msg
panda_ws/src/nils_master_pkg/robots/: panda_with_gripper_mounted.urdf.xacro  panda_with_gripper_mounted.xacro
panda_ws/src/nils_master_pkg/src/: prediction_handler.cpp  pubRobotPose.cpp  publish_apriltag_pose.cpp  publish_tf_apriltag_pose_to_controller.cpp  publish_tf_apriltag_pose_to_controller_gripper.cpp  publish_tf_apriltag_pose_to_predictor.cpp  publish_tf_apriltag_pose_to_predictor_gripper.cpp
panda_ws/src/nils_master_pkg/src/gripper/: Calibrator_GUI.py  DemoExecution.py  GripperInterface.py  Mark10Controller.py  RadarPlot.py  RobotInterface.py  Robot_GUI.py  Sampler.py  Sampler_GUI.py  SensorInterface.py  Sensor_GUI.py  demo_GUI.py  main_GUI_nils.py  main_nils.py  nils_test.py  os_interface.py
panda_ws/src/nils_master_pkg/src/gripper/tmp/: GUIstate_GraphMain  sampler.txt
panda_ws/src/nils_master_pkg/src/pick-up-static-known/: gripper_static_known.py  publish_hardcoded_coordinates.cpp
panda_ws/src/nils_master_pkg/src/pick-up-static-unknown/: gaussian.py  gripper_static_unknown.py  img2objPose.py  publish_detected_coordinates.cpp  test.py
panda_ws/src/object_detector/: CMakeLists.txt
panda_ws/src/object_detector/apriltag development files/: tag_detections output format
panda_ws/src/object_detector/calibration file/: Device - VID164C_PID5533_FF001107.md  gamma_corrected_bluefox3.xml  ost.txt  ost.yaml  terminal_print_calib_file_loaded  terminal_print_calib_file_not_loaded
panda_ws/src/object_detector/config/: apriltag_settings.yaml  apriltag_tags.yaml  rc_genicam_calib.config  rc_genicam_config.config  rviz_custom.rviz
panda_ws/src/object_detector/launch/: apriltag_continuous_detection.launch  camera_calibrator.launch  object_detector.launch  pose_tf_cam_to_panda.launch  qr_basic.launch  qr_detector.launch  rc_genicam.launch  rc_genicam_and_image_converter.launch  rc_genicam_and_obj_detector.launch  rc_qr_img-conv.launch  target_selector.launch
panda_ws/src/object_detector/src/: Strings in QR code images.txt  V1_pose_transformer.cpp  apriltag_topic_converter.cpp  dummy_tf_listener.cpp  image_converter.cpp  object_detector.cpp  pose_tf_cam_to_panda.cpp  qr_basic.cpp  qr_detector.cpp  rc_gemicam.config  target_selector.cpp
panda_ws/src/paic/: CMakeLists.txt
panda_ws/src/paic/include/paic/: paic.h
panda_ws/src/paic/src/: paic.cpp
panda_ws/src/planner/: CMakeLists.txt  package.xml
panda_ws/src/planner/include/planner/cubic_trajectory_generator/: cubic_trajectory_generator.cpp  cubic_trajectory_generator.h  cubic_trajectory_generator_data.cpp  cubic_trajectory_generator_data.h  cubic_trajectory_generator_initialize.cpp  cubic_trajectory_generator_initialize.h  cubic_trajectory_generator_terminate.cpp  cubic_trajectory_generator_terminate.h  cubic_trajectory_generator_types.h  defines.txt  rtGetInf.cpp  rtGetNaN.cpp  rtGetNaN.h
panda_ws/src/planner/include/planner/cubic_trajectory_generator/examples/: main.cpp
panda_ws/src/planner/include/planner/cubic_trajectory_generator/html/: report.mldatx
panda_ws/src/planner/include/planner/cubic_trajectory_generator/interface/: _coder_cubic_trajectory_generator_api.cpp  _coder_cubic_trajectory_generator_api.h  _coder_cubic_trajectory_generator_mex.cpp  _coder_cubic_trajectory_generator_mex.h
panda_ws/src/planner/src/: cubic_planner.cpp
panda_ws/src/planner/src/ik_sim/: conveyor_belt_system_identification.m  cubic_trajectory_generator.m  cubic_trajectory_generator.prj  cubic_trajectory_generator_mex.mexw64  cubic_trajectory_generator_pos_vel.m  cubic_trajectory_generator_pos_vel.prj  ik_solver_pos.m  ik_solver_pos_vel.m  init_inverse_kinematics_solver.m  init_matlab_franka_emika_panda_robot.m  init_matlab_franka_emika_panda_robot.prj  inverse_kinematics_sim.m  planning_and_control_loop_simulation.m  plot_color_transition_functions.m  test_cubic_trajectory_generator.m  test_cubic_trajectory_generator_pos_vel.m  test_ik_solver.m  test_ik_solver_pos_vel.m  test_init_matlab_franka_emika_panda_robot.m  test_trajectory_solver.m  threeColorSigmoidTransition.m  threeColorSinTransition.m  trajectory_solver.m  trajectory_solver.prj  twoColorSinTransition.m
panda_ws/src/planner/src/ik_sim/codegen/lib/cubic_trajectory_generator/: .gitignore  _clang-format  codedescriptor.dmr  cubic_trajectory_generator.cpp  cubic_trajectory_generator_data.cpp  cubic_trajectory_generator_data.h  cubic_trajectory_generator_initialize.cpp  cubic_trajectory_generator_initialize.h  cubic_trajectory_generator_rtw.bat  (+12 more)
panda_ws/src/predictor/: CMakeLists.txt  package.xml
panda_ws/src/predictor/launch/: predictor.launch  predictor2d.launch  predictor3d.launch
panda_ws/src/predictor/src/: -home-christian-msc_ws-src-predictor-src-.txt  prediction_handler_or_path_planner.cpp  predictor.cpp  predictor2d.cpp  predictor3d.cpp
(+310 files in other folders)
